--- a/paper/iclr25liu.bib
+++ b/paper/iclr25liu.bib
@@ -1,4 +1,4 @@
-@inproceedings{
+@inproceedings{iclr25liu,
     author={Yazheng Liu and Sihong Xie},
     booktitle={ICLR},
     title={{Explanations of GNN on Evolving Graphs via Axiomatic  Layer edges}},
